# chatbot-web-socket

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
auth/: urls.py  views.py
chat/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chatbot/: asgi.py  settings.py  urls.py
templates/: base.html
templates/auth/: register-login.html
templates/chat/: chat-view.html
templates/includes/: footer.html  navbar.html  sidebar.html
