[tool.poetry]
name = "chatbot-web-socket"
version = "0.1.0"
description = ""
authors = ["yusuf <yachour31@gmail.com>"]
readme = "README.md"
packages = [{include = "chatbot_web_socket"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-decouple = "^2.1"
django-extensions = "^3.2.1"
channels-redis = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
